# ncov2019-analyzer

./: .gitignore  CMakeLists.txt  README.md  buildinstall.bat  buildtest.bat  buildtest.sh  covid19.cpp
examples/: CMakeLists.txt  DNATrie.cpp  DNATypes.cpp  TestObject.h
